dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: quarkus-dev
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: quarkus-dev
    app.kubernetes.io/name: quarkus-dev
    app.kubernetes.io/part-of: ENV-DEV
    app.openshift.io/runtime: quarkus
  name: quarkus-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-dev
  template:
    metadata:
      labels:
        app: quarkus-dev
    spec:
      containers:
      - name: quarkus-dev
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/project01/quarkus100:main
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
