dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-dev
  name: quarkus-dev
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-dev
    weight: 100
